# autou-email-classifier

./: Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/backend/: .gitignore  Dockerfile  cors_config.py  env.example  pyproject.toml  pytest.ini  requirements.txt
app/backend/src/: __init__.py  main.py
app/backend/src/adapters/: __init__.py  dependencies.py
app/backend/src/adapters/gateways/: __init__.py  classifiers.py  email_parsers.py  repositories.py  responders.py  services.py
app/backend/src/adapters/http/: __init__.py  controllers.py
app/backend/src/core/: __init__.py  ports.py
app/backend/src/core/application/: __init__.py  dto.py  use_cases.py
app/backend/src/core/domain/: __init__.py  entities.py  services.py
app/backend/src/infra/: logging.py  settings.py
app/backend/tests/: conftest.py  test_controllers.py  test_domain_entities.py  test_domain_services.py  test_email_parsers.py  test_simple.py  test_use_cases.py
app/frontend/: .eslintrc.cjs  .gitignore  .prettierrc  DEPLOY-VERCEL.md  Dockerfile  env.production  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
app/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/frontend/src/api/: client.ts
app/frontend/src/components/: FileUpload.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  ResultCard.tsx
app/frontend/src/hooks/: useApiHealth.ts  useEmailProcessing.ts
app/frontend/src/lib/: api.ts
app/frontend/src/test/: setup.ts
(+6 files in other folders)
